--- a/calculator.html
+++ b/calculator.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>User Data Display</title>
-    <link rel="stylesheet" href="fetch-data.css">
+    <title>Simple Calculator</title>
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
-    <div id="content">
-        <h1>User List</h1>
-        <div id="api-data">Loading user data...</div>
+    <div id="calculator-container">
+        <input type="number" id="number1" placeholder="Number 1">
+        <input type="number" id="number2" placeholder="Number 2">
+
+        <button id="add">+</button>
+        <button id="subtract">-</button>
+        <button id="multiply">*</button>
+        <button id="divide">/</button>
+
+        <div id="result">Result: <span id="calculation-result">0</span></div>
     </div>
-    <script src="fetch-data.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
